--- a/pages/peta.html
+++ b/pages/peta.html
@@ -127,6 +127,7 @@
 		<script src="../scripts/peta/layers/geoJSON/LokasiSaranaPendidikan.js"></script>
 		<script src="../scripts/peta/layers/geoJSON/LokasiStasiunKA.js"></script>
 		<script src="../scripts/peta/layers/geoJSON/LokasiTerminalBus.js"></script>
+		<script src="../scripts/peta/layers/geoJSON/JaringanSungai.js"></script>
 
 		<script src="../scripts/peta/layers/styles/BatasKecamatan_style.js"></script>
 		<script src="../scripts/peta/layers/styles/BatasDesa_style.js"></script>
@@ -135,6 +136,7 @@
 		<script src="../scripts/peta/layers/styles/LokasiSaranaPendidikan_style.js"></script>
 		<script src="../scripts/peta/layers/styles/LokasiStasiunKA_style.js"></script>
 		<script src="../scripts/peta/layers/styles/LokasiTerminalBus_style.js"></script>
+		<script src="../scripts/peta/layers/styles/JaringanSungai_style.js"></script>
 
 		<script src="../scripts/peta/layers/layers.js" type="text/javascript"></script>
 
