Tambah info sumber pada layer hasil survey lapangan 2019

--- a/pages/beranda.html
+++ b/pages/beranda.html
@@ -172,7 +172,7 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-batas-wilayah/1-kec-tarik.rar"
+									<a class="btn waves-effect" href="../files/peta-batas-wilayah/1-kec-tarik.rar"
 										>Download</a
 									>
 								</div>
@@ -198,7 +198,7 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-batas-wilayah/2-kec-prambon.rar">
+									<a class="btn waves-effect" href="../files/peta-batas-wilayah/2-kec-prambon.rar">
 										Download
 									</a>
 								</div>
@@ -224,7 +224,7 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-batas-wilayah/3-kec-krembung.rar">
+									<a class="btn waves-effect" href="../files/peta-batas-wilayah/3-kec-krembung.rar">
 										Download
 									</a>
 								</div>
@@ -250,7 +250,7 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-batas-wilayah/4-kec-porong.rar">
+									<a class="btn waves-effect" href="../files/peta-batas-wilayah/4-kec-porong.rar">
 										Download
 									</a>
 								</div>
@@ -276,7 +276,7 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-batas-wilayah/5-kec-jabon.rar"
+									<a class="btn waves-effect" href="../files/peta-batas-wilayah/5-kec-jabon.rar"
 										>Download</a
 									>
 								</div>
@@ -302,7 +302,10 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-batas-wilayah/6-kec-tanggulangin.rar">
+									<a
+										class="btn waves-effect"
+										href="../files/peta-batas-wilayah/6-kec-tanggulangin.rar"
+									>
 										Download
 									</a>
 								</div>
@@ -328,7 +331,7 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-batas-wilayah/7-kec-candi.rar"
+									<a class="btn waves-effect" href="../files/peta-batas-wilayah/7-kec-candi.rar"
 										>Download</a
 									>
 								</div>
@@ -354,7 +357,7 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-batas-wilayah/8-kec-sidoarjo.rar">
+									<a class="btn waves-effect" href="../files/peta-batas-wilayah/8-kec-sidoarjo.rar">
 										Download
 									</a>
 								</div>
@@ -380,7 +383,7 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-batas-wilayah/9-kec-tulangan.rar">
+									<a class="btn waves-effect" href="../files/peta-batas-wilayah/9-kec-tulangan.rar">
 										Download
 									</a>
 								</div>
@@ -406,7 +409,7 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-batas-wilayah/10-kec-wonoayu.rar">
+									<a class="btn waves-effect" href="../files/peta-batas-wilayah/10-kec-wonoayu.rar">
 										Download
 									</a>
 								</div>
@@ -432,7 +435,7 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-batas-wilayah/11-kec-krian.rar">
+									<a class="btn waves-effect" href="../files/peta-batas-wilayah/11-kec-krian.rar">
 										Download
 									</a>
 								</div>
@@ -458,7 +461,10 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-batas-wilayah/12-kec-balongbendo.rar">
+									<a
+										class="btn waves-effect"
+										href="../files/peta-batas-wilayah/12-kec-balongbendo.rar"
+									>
 										Download
 									</a>
 								</div>
@@ -484,7 +490,7 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-batas-wilayah/13-kec-taman.rar">
+									<a class="btn waves-effect" href="../files/peta-batas-wilayah/13-kec-taman.rar">
 										Download
 									</a>
 								</div>
@@ -510,7 +516,7 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-batas-wilayah/14-kec-sukodono.rar">
+									<a class="btn waves-effect" href="../files/peta-batas-wilayah/14-kec-sukodono.rar">
 										Download
 									</a>
 								</div>
@@ -536,7 +542,7 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-batas-wilayah/15-kec-buduran.rar">
+									<a class="btn waves-effect" href="../files/peta-batas-wilayah/15-kec-buduran.rar">
 										Download
 									</a>
 								</div>
@@ -562,7 +568,7 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-batas-wilayah/16-kec-gedangan.rar">
+									<a class="btn waves-effect" href="../files/peta-batas-wilayah/16-kec-gedangan.rar">
 										Download
 									</a>
 								</div>
@@ -588,7 +594,7 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-batas-wilayah/17-kec-sedati.rar">
+									<a class="btn waves-effect" href="../files/peta-batas-wilayah/17-kec-sedati.rar">
 										Download
 									</a>
 								</div>
@@ -614,7 +620,7 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-batas-wilayah/18-kec-waru.rar"
+									<a class="btn waves-effect" href="../files/peta-batas-wilayah/18-kec-waru.rar"
 										>Download</a
 									>
 								</div>
@@ -647,7 +653,9 @@
 									<span class="card-title flow-text">Peta Jaringan Jalan</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-dasar/jaringan-jalan.rar">Download</a>
+									<a class="btn waves-effect" href="../files/peta-dasar/jaringan-jalan.rar"
+										>Download</a
+									>
 								</div>
 							</div>
 						</div>
@@ -668,7 +676,9 @@
 									<span class="card-title flow-text">Peta Jaringan Sungai</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-dasar/jaringan-sungai.rar">Download</a>
+									<a class="btn waves-effect" href="../files/peta-dasar/jaringan-sungai.rar"
+										>Download</a
+									>
 								</div>
 							</div>
 						</div>
@@ -689,7 +699,7 @@
 									<span class="card-title flow-text">Peta Kemiringan Lahan</span>
 								</div>
 								<div class="card-action">
-									<a href="files/peta-dasar/kemiringan-lahan.rar" class="btn waves-effect"
+									<a href="../files/peta-dasar/kemiringan-lahan.rar" class="btn waves-effect"
 										>Download</a
 									>
 								</div>
@@ -715,7 +725,7 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-dasar/danau.rar">Download</a>
+									<a class="btn waves-effect" href="../files/peta-dasar/danau.rar">Download</a>
 								</div>
 							</div>
 						</div>
@@ -739,7 +749,7 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-dasar/sarana-pendidikan.rar"
+									<a class="btn waves-effect" href="../files/peta-dasar/sarana-pendidikan.rar"
 										>Download</a
 									>
 								</div>
@@ -765,7 +775,7 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a href="files/peta-dasar/sarana-kesehatan.rar" class="btn waves-effect"
+									<a href="../files/peta-dasar/sarana-kesehatan.rar" class="btn waves-effect"
 										>Download</a
 									>
 								</div>
@@ -791,7 +801,7 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-dasar/sarana-stasiun-ka.rar"
+									<a class="btn waves-effect" href="../files/peta-dasar/sarana-stasiun-ka.rar"
 										>Download</a
 									>
 								</div>
@@ -817,7 +827,7 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-dasar/sarana-terminal-bis.rar"
+									<a class="btn waves-effect" href="../files/peta-dasar/sarana-terminal-bis.rar"
 										>Download</a
 									>
 								</div>
@@ -843,7 +853,7 @@
 									</span>
 								</div>
 								<div class="card-action">
-									<a class="btn waves-effect" href="files/peta-dasar/hasil-survey-lapangan.rar">
+									<a class="btn waves-effect" href="../files/peta-dasar/hasil-survey-lapangan.rar">
 										Download
 									</a>
 								</div>
